Fix center text alignment for long round names

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -105,6 +105,7 @@ body {
     margin-left: auto;
     font-weight: bold;
     font-size: 1rem;
+    text-align: center;
 }
 
 .tooltip-inner {
